--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
 	compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5'
 	compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
+
+	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.12'
 }
 
 
